# agentforge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agentforge/: __init__.py  cli.py  templates.py
agentforge/core/: agent.py  artifact_store.py  cache.py  config.py  evaluator.py  memory.py  middleware.py  orchestrator.py  pipeline.py  pipeline_conditions.py  pipeline_events.py  planner.py  rate_limiter.py  reflection.py  run_store.py  supervisor.py  validation.py
agentforge/ext/: __init__.py
agentforge/llm/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py
agentforge/observability/: __init__.py  events.py  metrics.py  tracer.py
agentforge/schemas/: __init__.py  api.py
agentforge/server/: app.py  routes.py  routes_advanced.py
agentforge/tools/: __init__.py  api_caller.py  base.py  chrono_tool.py  chunk_tool.py  code_executor.py  csv_tool.py  datetime_tool.py  diff_tool.py  document_reader.py  encoding_tool.py  env_tool.py  fetch_url.py  file_ops.py  github_tool.py  hash_tool.py  image_gen.py  json_path.py  json_schema_tool.py  math_expression.py  regex_tool.py  shell_command.py  sql_query.py  summarize.py  template_tool.py  text_structure_tool.py  uuid_tool.py  web_search.py  xml_tool.py  yaml_tool.py
agentforge/utils/: chrono.py  config.py  iterextras.py  logging.py  retry.py  sanitize.py  semver_compare.py  simple_schema.py  structured_text.py  text_utils.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG_NEXT_LEVEL.md  COOKBOOK.md  NEXT_LEVEL.md  RUNBOOK.md  TOOLS_REFERENCE.md
examples/: full_pipeline_with_events.py  multi_agent_pipeline.py  next_level_demo.py  research_pipeline.yaml  simple_agent.py  streaming_demo.py  tool_agent.py
tests/: conftest.py  test_agent.py  test_extensions.py  test_memory.py  test_nextlevel.py  test_orchestrator.py  test_pipeline.py  test_tools.py
tests/integration/: __init__.py  test_diff_chunk_tools.py  test_extended_tools_batch.py  test_next_level_tools.py  test_pipeline_events.py  test_server_advanced.py  (+1 more)
workflows/: README.md  code_review.yaml  multi_step.yaml  qa_chain.yaml  research_report.yaml  summarize_doc.yaml
(+9 files in other folders)
